register post service changed

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
         {
             "type": "node",
             "request": "launch",
-            "name": "mysql Program",
+            "name": "Launch Program",
             "program": "${workspaceFolder}/backend.js"
         }
     ]
